--- a/templates/signup.html
+++ b/templates/signup.html
@@ -14,23 +14,23 @@
 <body>
     <div class="container">
         
-        <div class="title">Registrarse en TrueBeauty</div>
+        <div class="title">Registrarse en True Beauty</div>
         <form method="POST">
             <div class="user-details">
 
                 <div class="input-box-1">
                     <span class="details">Nombre</span>
-                    <input type="text" name="nombre" class="" placeholder="Ingresa tu nombre" required>
+                    <input type="text" class="" name="nombre" placeholder="Ingresa tu nombre" required>
                 </div>
 
                 <div class="input-box">
                     <span class="details">Apellido paterno</span>
-                    <input type="text" name="apellido1" class="" placeholder="Ingresa tu apellido paterno" required>
+                    <input type="text" class="" name="apellido1" placeholder="Ingresa tu apellido paterno" required>
                 </div>
 
                 <div class="input-box">
                     <span class="details">Apellido materno</span>
-                    <input type="text" name="apellido2" class="" placeholder="Ingresa tu apellido materno" required>
+                    <input type="text" class="" name="apellido2" placeholder="Ingresa tu apellido materno" required>
                 </div>
 
                 <div class="input-box">
