Cambiar estilo en "agendar_cita.html"

--- a/static/css/fecha_cita.css
+++ b/static/css/fecha_cita.css
@@ -48,7 +48,7 @@ body {
 }
 
 .bg-purple {
-  background-color: #7CB8EB;
+  background: linear-gradient(-135deg, rgb(81, 148, 196) 35%, rgb(158, 210, 255) 100%);
 }
 
 .center {
@@ -56,3 +56,30 @@ body {
   justify-content: center;
 }
 
+button.submit {
+  color: #fff;
+  padding: 14px 64px;
+  margin: 32px auto;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: bold;
+  background: linear-gradient(-135deg, rgb(81, 148, 196) 35%, rgb(158, 210, 255) 100%);
+  cursor: pointer;
+  transition: opacity 0.4s;
+  border-radius: 30px;
+}
+
+button.submit:hover {
+  opacity: 0.9;
+}
+
+button {
+  border: none;
+  outline: none;
+  border-radius: 30px;
+  font-size: 1.1em;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
