--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -28,9 +28,9 @@
       <p class="welcome-message">Ingrese su correo electrónico para recuperar contraseña</p>
 
       {% for message in get_flashed_messages() %}
-      <div class="alert alert-secondary alert-dismissible fade show" role="alert">
+      <div id="alerta" class="alert alert-secondary alert-dismissible fade show" role="alert">
         {{message}}
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        <button type="button" onclick="cerrarAlerta()" class="btn-close" data-bs-dismiss="alert" aria-label="Close">X</button>
       </div>
       {% endfor %}
 
@@ -47,7 +47,12 @@
       </form>
     </div>
   </section>
+<script>
 
+      let cerrarAlerta = () => {
+          document.getElementById('alerta').setAttribute('style','display: none;')
+      }
+  </script>
 </body>
 
 </html>
