--- a/templates/login.html
+++ b/templates/login.html
@@ -27,10 +27,11 @@
       <p class="welcome-message">Por favor, ingresa los datos solicitados para ingresar sesión</p>
 
       {% for message in get_flashed_messages() %}
-      <div class="alert alert-secondary alert-dismissible fade show" role="alert">
+      <div id="alerta" class="alert alert-secondary alert-dismissible fade show" role="alert">
         {{message}}
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        <button  type="button" onclick="cerrarAlerta()" class="btn-close" data-bs-dismiss="alert" aria-label="Close"> X</button>
       </div>
+
       {% endfor %}
 
       <form class="login-form" method="POST">
@@ -51,6 +52,12 @@
     </div>
   </section>
 
+  <script>
+
+      let cerrarAlerta = () => {
+          document.getElementById('alerta').setAttribute('style','display: none;')
+      }
+  </script>
 </body>
 
 </html>
