--- a/templates/confirmar_cita.html
+++ b/templates/confirmar_cita.html
@@ -204,8 +204,8 @@
                             <div class="col-md-7 col-lg-8">
                                 {# SE PUEDE MODIFICAR PERO SOLO A TRAVES DE CLASES (class="..."), NO CAMBIAR TIPO DE
                                 ETIQUETA (<button></button>) O EL ATRIBUTO "type" PORFAVOR #}
-                                <!--<button class="w-100 btn btn-primary btn-lg" type="submit">Agendar cita</button>-->
-                                <button class="btn-agregar" type="submit">Agendar cita</button>
+                                <button class="w-100 btn btn-primary btn-lg" type="submit">Agendar cita</button>
+                                <button class="submit" type="submit" name="enviar" value="Enviar">Entrar</button>
 
                                 {# <p align="right"><a class="btn btn-lg btn-primary" href="/inicio">Agendar cita</a>
                                 </p>#}
