Cambiar estilo en confirmar_cita.html

--- a/templates/confirmar_cita.html
+++ b/templates/confirmar_cita.html
@@ -54,7 +54,7 @@
             <div class="d-flex align-items-center p-3 my-3 text-white bg-purple rounded shadow-sm">
                 <img class="me-3" src="/static/images/informacion_cita_agendar_cita.png" alt="" width="48" height="48">
                 <div class="lh-1">
-                    <h1 class="h6 mb-0 text-white lh-1">Porfavor asegúrese que los campos sean correctos:</h1>
+                    <h1 class="h6 mb-0 text-white lh-1">Por favor asegúrese que los campos sean correctos:</h1>
                     <small>(Si hay algún dato erróneo agende de nuevo la cita)</small>
                 </div>
             </div>
@@ -204,8 +204,8 @@
                             <div class="col-md-7 col-lg-8">
                                 {# SE PUEDE MODIFICAR PERO SOLO A TRAVES DE CLASES (class="..."), NO CAMBIAR TIPO DE
                                 ETIQUETA (<button></button>) O EL ATRIBUTO "type" PORFAVOR #}
-                                <button class="w-100 btn btn-primary btn-lg" type="submit">Agendar cita</button>
-                                <button class="submit" type="submit" name="enviar" value="Enviar">Entrar</button>
+                                {#<button class="w-100 btn btn-primary btn-lg" type="submit">Agendar cita</button>#}
+                                <button class="submit" type="submit" name="enviar" value="Enviar">Agendar cita</button>
 
                                 {# <p align="right"><a class="btn btn-lg btn-primary" href="/inicio">Agendar cita</a>
                                 </p>#}
