--- a/templates/hora_cita.html
+++ b/templates/hora_cita.html
@@ -38,10 +38,12 @@
                         </select>
                     </div>
                 </div>
+
+                <p><button class="submit" type="submit">Continuar</button></p>
             </div>
 
             <hr class="my-4">
-            <p><button class="submit" type="submit">Continuar</button></p>
+            {#<p><button class="submit" type="submit">Continuar</button></p>#}
 
         </form>
         {# <form action="" method="POST">#}
@@ -85,12 +87,8 @@
     </main>
 
     <footer class="my-5 pt-5 text-muted text-center text-small">
-        <p class="mb-1">&copy; 2017–2022 Company Name</p>
-        <ul class="list-inline">
-            <li class="list-inline-item"><a href="#">Privacy</a></li>
-            <li class="list-inline-item"><a href="#">Terms</a></li>
-            <li class="list-inline-item"><a href="#">Support</a></li>
-        </ul>
+        <p class="mb-1">&copy; 2017–2022 True Beauty</p>
+        
     </footer>
 
 
