--- a/static/css/consultar_cita.css
+++ b/static/css/consultar_cita.css
@@ -28,12 +28,56 @@ body {
 }
 
 .bg-purple {
-  background-color: #7CB8EB;
+  background: linear-gradient(-135deg, rgb(81, 148, 196) 35%, rgb(158, 210, 255) 100%);
 }
 
 .btn-style {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+}
+
+.ver-cita-cambiar-cita{
+  margin-bottom: auto;
+}
+
+a.btn{
+  font-weight: bold;
+  
+}
+
+.btn-outline {
+  color:rgb(81, 148, 196)!important;
+  border-color: rgb(81, 148, 196)!important;
+  
+}
+
+.btn-outline:hover {
+  background-color: #9CD1FE;
+  color: #FFF!important;
+  font-weight: bold;
+
+}
+
+
+a.btn-agendar {
+
+  color: #fff;
+  padding: 14px 64px;
+  margin: 32px auto;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: bold;
+  background: linear-gradient(-135deg, rgb(81, 148, 196) 35%, rgb(158, 210, 255) 100%);
+  cursor: pointer;
+  transition: opacity 0.4s;
+  border-radius: 30px;
+  text-decoration:none;
+}
+
+a.btn-agendar:hover {
+  opacity: 0.8;
+  text-decoration:none;
+  color: #FFF;
 }
 
