Cambiar estilo en inicio.html

--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -30,8 +30,9 @@
           <div class="container">
             <div class="carousel-caption text-start" img="">
               <h1 class="font-colors-carrusel">Agenda una cita en True Beauty</h1>
-              <p class="font-colors font-style">¡No pierdas la oportunidad de tener los mejores tratamientos y los mejores resultados!</p>
-              <p><a class="btn btn-lg btn-primary" href="/escoger_cita">Agendar cita</a></p>
+              <p class="font-colors font-style">¡No pierdas la oportunidad de tener los mejores tratamientos y los
+                mejores resultados!</p>
+              <p><a type="button" class="btn-inicio" href="/escoger_cita">Agendar cita</a></p>
             </div>
           </div>
         </div>
@@ -48,7 +49,7 @@
             <div class="carousel-caption">
               <h1 class="font-colors-carrusel">Conoce las citas que has hecho</h1>
               <p class="font-colors font-style">Consulta el día y la hora de tu cita</p>
-              <p><a class="btn btn-lg btn-primary" href="/consultar_citas">Consultar cita</a></p>
+              <p><a type="button" class="btn-inicio" href="/consultar_citas">Consultar cita</a></p>
             </div>
           </div>
         </div>
@@ -92,100 +93,37 @@
           <h2 class="fw-normal">Conoce nuestro trabajo</h2>
           <p>Algunas muestras de lo que True Beauty puede hacer, con la garantía de que todos nuestros clientes siempre
             han salido con una sonrisa en sus caras</p>
-          <p><a class="btn btn-secondary" href="/reparacion">Echar vistazo &raquo;</a></p>
+          <p><a class="btn btn-secondary" style="border-radius: 30px;" href="/reparacion">Echar vistazo &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
 
         <div class="col-lg-4">
           <img src="/static/images/servicios.png" alt="" width="100" height="100">
           <h2 class="fw-normal">Servicios</h2>
-          <p>Echa un vistazo a todo lo que puedes obtener siendo cliente de True Beauty. Desde cortes de cabello hasta masajes faciales, todo en nuestras instalaciones 
+          <p>Echa un vistazo a todo lo que puedes obtener siendo cliente de True Beauty. Desde cortes de cabello hasta
+            masajes faciales, todo en nuestras instalaciones
           </p>
-          <p><a class="btn btn-secondary" href="/reparacion">Conocer servicios &raquo;</a></p>
+          <p><a class="btn btn-secondary" style="border-radius: 30px;" href="/reparacion">Conocer servicios &raquo;</a>
+          </p>
         </div><!-- /.col-lg-4 -->
 
         <div class="col-lg-4">
           <img src="/static/images/brochas.png" alt="" width="100" height="100">
           <h2 class="fw-normal">Productos en venta</h2>
-          <p>En True Beauy nos preocupamos por el cuidado cosmético de nuestros clientes, por lo que contamos con una sección de venta de productos de calidad y accesibles</p>
-          <p><a class="btn btn-secondary" href="/reparacion">Comprar &raquo;</a></p>
+          <p>En True Beauy nos preocupamos por el cuidado cosmético de nuestros clientes, por lo que contamos con una
+            sección de venta de productos de calidad y accesibles</p>
+          <p><a class="btn btn-secondary" style="border-radius: 30px;" href="/reparacion">Comprar &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
 
-      <!-- START THE FEATURETTES -->
+      
 
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading fw-normal lh-1">First featurette heading. <span class="text-muted">It’ll blow
-              your mind.</span></h2>
-          <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose
-            here.</p>
-        </div>
-        <div class="col-md-5">
-          <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-            height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-            preserveAspectRatio="xMidYMid slice" focusable="false">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-          </svg>
-
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7 order-md-2">
-          <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span class="text-muted">See for
-              yourself.</span></h2>
-          <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this
-            layout would work with some actual real-world content in place.</p>
-        </div>
-        <div class="col-md-5 order-md-1">
-          <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-            height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-            preserveAspectRatio="xMidYMid slice" focusable="false">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-          </svg>
-
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading fw-normal lh-1">And lastly, this one. <span class="text-muted">Checkmate.</span>
-          </h2>
-          <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really
-            intended to be actually read, simply here to give you a better view of what this would look like with some
-            actual content. Your content.</p>
-        </div>
-        <div class="col-md-5">
-          <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-            height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-            preserveAspectRatio="xMidYMid slice" focusable="false">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-          </svg>
-
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <!-- /END THE FEATURETTES -->
-
-    </div><!-- /.container -->
-
+    <hr class="featurette-divider">
 
     <!-- FOOTER -->
     <footer class="container">
       <p class="float-end"><a href="#">Back to top</a></p>
-      <p>&copy; 2017–2022 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+      <p>&copy; 2017–2022 True Beauty, Inc.</p>
     </footer>
   </main>
 
