Agregar Servicios.html

--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -93,7 +93,7 @@
           <h2 class="fw-normal">Conoce nuestro trabajo</h2>
           <p>Algunas muestras de lo que True Beauty puede hacer, con la garantía de que todos nuestros clientes siempre
             han salido con una sonrisa en sus caras</p>
-          <p><a class="btn btn-secondary" style="border-radius: 30px;" href="/reparacion">Echar vistazo &raquo;</a></p>
+          <p><a class="btn btn-secondary" style="border-radius: 30px;" href="/servicios">Echar vistazo &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
 
         <div class="col-lg-4">
