Cambiar estilo modificar_cita.html

--- a/templates/modificar_cita.html
+++ b/templates/modificar_cita.html
@@ -83,7 +83,7 @@
                 Please select a valid service.
               </div>
 
-              <button onclick="agregarServicio()" type="button" class="btn">+</button>
+              <button onclick="agregarServicio()" type="button" class="btn-agregar">+</button>
               <label for="" class="form-label" id="precio">Precio: $0.00</label>
 
               <div class="col-md-12">
@@ -130,7 +130,7 @@
               <div class="col-md-7 col-lg-8">
                 {# SE PUEDE MODIFICAR PERO SOLO A TRAVES DE CLASES (class="..."), NO CAMBIAR TIPO DE ETIQUETA
                 (<button></button>) O EL ATRIBUTO "type" PORFAVOR #}
-                <button class="w-100 btn btn-primary btn-lg" type="submit">Continuar</button>
+                <button class="submit" type="submit">Continuar</button>
                 {# <p align="right"><a class="btn btn-lg btn-primary" href="/inicio">Agendar cita</a></p>#}
 
               </div>
@@ -150,12 +150,8 @@
   </form>
 
   <footer class="my-5 pt-5 text-muted text-center text-small">
-    <p class="mb-1">&copy; 2017–2022 Company Name</p>
-    <ul class="list-inline">
-      <li class="list-inline-item"><a href="#">Privacy</a></li>
-      <li class="list-inline-item"><a href="#">Terms</a></li>
-      <li class="list-inline-item"><a href="#">Support</a></li>
-    </ul>
+    <p class="mb-1">&copy; 2017–2022 True Beauty</p>
+    
   </footer>
 
 
