Cambiar estilo informacion_usuario.html

--- a/templates/informacion_usuario.html
+++ b/templates/informacion_usuario.html
@@ -95,9 +95,9 @@
                         <hr class="my-4">
 
                         <div style="display: flex; justify-content: space-between">
-                        <button style="margin:1%" class="w-15 btn btn-primary btn-lg" type="submit">Guardar cambios</button>
+                        <button style="margin:1%" class="submit" type="submit">Guardar cambios</button>
                             {% if id_consultante == info_cuenta['id_usuario'] %}
-                        <a style="margin:1%" class="w-15 btn btn-primary btn-lg" href="/cambiar_password">Cambiar contraseña</a>
+                        <a style="margin:1%" class="cambiarContraseña" href="/cambiar_password">Cambiar contraseña</a>
                             {% endif %}
                         </div>
                     </div>
