--- a/templates/informacion_usuario.html
+++ b/templates/informacion_usuario.html
@@ -95,7 +95,7 @@
                         <hr class="my-4">
 
                         <div style="display: flex; justify-content: space-between">
-                        <button style="margin:1%" class="submit" type="submit">Guardar cambios</button>
+                        <button style="margin:1%" class="submit" type="submit">Guardar</button>
                             {% if id_consultante == info_cuenta['id_usuario'] %}
                         <a style="margin:1%" class="cambiarContraseña" href="/cambiar_password">Cambiar contraseña</a>
                             {% endif %}
@@ -112,11 +112,6 @@
 
     <footer class="my-5 pt-5 text-muted text-center text-small">
         <p class="mb-1">&copy; 2017–2022 True Beauty</p>
-        <ul class="list-inline">
-            <li class="list-inline-item"><a href="#">Privacy</a></li>
-            <li class="list-inline-item"><a href="#">Terms</a></li>
-            <li class="list-inline-item"><a href="#">Support</a></li>
-        </ul>
     </footer>
     </div>
 
